<resources>
    <string name="app_name">DataCaptureApp</string>
    <string name="selecciona_un_objeto">Select a figure</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="triangulo">Triangle</string>
    <string name="circulo">circle</string>
    <string name="rombo">rombo</string>
    <string name="ingrese_el_id_del_usuario">Enter the user id</string>
    <string name="continuar">Continue</string>
    <string name="nombre_config">Name</string>
    <string name="intentos_config">Training Number</string>
    <string name="trial_config">Trial Number</string>
    <string name="segundosVelocidad_config">Speed</string>
    <string name="desapareceInicio_config">Disappear at</string>
    <string name="desapareceFinal_config">Disappear ends</string>
    <string name="nueva_configuracion">New configuration</string>
    <string name="configuraciones_guardadas">Saved configurations</string>
    <string name="eliminar_todo">Delete all</string>
    <string name="ingrese_el_nombre_de_la_config">Enter the name of the configuration</string>
    <string name="selecciona_donde_desaparecera_el_objeto_inicio">Select the percentage of the screen on which the figure will disappear at start</string>
    <string name="selecciona_donde_desaparecera_el_objeto_final">Select the percentage of the screen on which the figure will disappear at end</string>
    <string name="enter_trainings">Enter the number of trainings</string>
    <string name="enter_trials">Enter the number of trials</string>
    <string name="enter_the_speed">Enter the speed (seconds that the object takes to travel through the screen)</string>
    <string name="bienvenido_al_entrenamiento">Welcome to the Training phase</string>
    <string name="explicacion">On the next screen follow the geometric figure with your finger.</string>
    <string name="countdown">CountDown</string>
    <string name="buen_trabajo">Good job during the training phase!</string>
    <string name="exp_principal">On the next screen you should do the same as during the training phase, but the geometric figure may disappear for a certain time, so you must pay attention!</string>
    <string name="title_activity_seleccionar_velocidad">SeleccionarVelocidad</string>
</resources>
