<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnNuevaConfig"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nueva_configuracion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/configuraciones_guardadas" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reciclador"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnEliminarTodo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/eliminar_todo" />

    </LinearLayout>



</LinearLayout>