<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/editText"
                            style="@android:style/Widget.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="none"
                            android:text="@string/selecciona_donde_desaparecera_el_objeto_inicio"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/picker_desaparece_inicio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal"></NumberPicker>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/selecciona_donde_desaparecera_el_objeto_final"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/picker_desaparece_final"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continuar" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
